<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.9</version>
        <relativePath/>
    </parent>

    <groupId>com.zj</groupId>
    <artifactId>ai-agent</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>AI Agent Platform</name>
    <description>AI Agent Platform with DDD Architecture</description>

    <!-- 子模块 -->
    <modules>
        <module>ai-agent-shared</module>
        <module>ai-agent-domain</module>
        <module>ai-agent-application</module>
        <module>ai-agent-infrastructure</module>
        <module>ai-agent-interfaces</module>
    </modules>

    <!-- 统一版本管理 -->
    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- 依赖版本 -->
        <spring-ai.version>1.0.1</spring-ai.version>
        <mybatis-plus.version>3.5.5</mybatis-plus.version>
        <lombok.version>1.18.30</lombok.version>
        <hutool.version>5.8.16</hutool.version>
        <fastjson.version>2.0.28</fastjson.version>
        <fastjson2.version>2.0.60</fastjson2.version>
        <guava.version>32.1.3-jre</guava.version>
        <commons-lang3.version>3.9</commons-lang3.version>
        <redisson.version>3.45.1</redisson.version>
        <jgit.version>7.2.1.202505142326-r</jgit.version>
        <mysql.version>8.0.28</mysql.version>
        <jjwt.version>0.12.3</jjwt.version>
        <logstash-logback.version>7.3</logstash-logback.version>
        <dom4j.version>1.6.1</dom4j.version>
        <xstream.version>1.4.10</xstream.version>
        <!-- protobuf版本 - 解决Milvus SDK冲突 -->
        <protobuf.version>3.25.3</protobuf.version>
    </properties>

    <!-- 依赖管理 -->
    <dependencyManagement>
        <dependencies>
            <!-- 内部模块版本 -->
            <dependency>
                <groupId>com.zj</groupId>
                <artifactId>ai-agent-shared</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.zj</groupId>
                <artifactId>ai-agent-domain</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.zj</groupId>
                <artifactId>ai-agent-application</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.zj</groupId>
                <artifactId>ai-agent-infrastructure</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.zj</groupId>
                <artifactId>ai-agent-interfaces</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- Spring AI -->
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>${spring-ai.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- MyBatis Plus -->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-boot-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>
            
            <!-- Protobuf - 统一版本解决Milvus SDK冲突 -->
            <dependency>
                <groupId>com.google.protobuf</groupId>
                <artifactId>protobuf-java</artifactId>
                <version>${protobuf.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.protobuf</groupId>
                <artifactId>protobuf-java-util</artifactId>
                <version>${protobuf.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>